// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Button /> > should match snapshot for default button 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <button
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_button__4z7xt311 reset_trimmedElement__4z7xt30 reset_button__4z7xt34 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_default__p2yon57 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5k Button_button_compound_3__p2yon5p"
    data-react-aria-pressable="true"
    tabindex="0"
    type="button"
  />
</div>
`;

exports[`<Button /> > when as button > should use html button element by default 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <button
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_button__4z7xt311 reset_trimmedElement__4z7xt30 reset_button__4z7xt34 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_default__p2yon57 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5k Button_button_compound_3__p2yon5p"
    data-react-aria-pressable="true"
    tabindex="0"
    type="button"
  />
</div>
`;

exports[`<Button /> > when custom component > should use html anchor element if href value exists 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <a
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_default__p2yon57 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5k Button_button_compound_3__p2yon5p"
    data-react-aria-pressable="true"
    href="abc"
    tabindex="0"
    type="button"
  />
</div>
`;

exports[`<Button /> > when isFullWidth > should match snapshot 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <button
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_button__4z7xt311 reset_trimmedElement__4z7xt30 reset_button__4z7xt34 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_default__p2yon57 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5k Button_button_isFullWidth_true__p2yon5h Button_button_compound_3__p2yon5p"
    data-react-aria-pressable="true"
    tabindex="0"
    type="button"
  />
</div>
`;
